# onnxruntime.gpu.test

./: .gitattributes  CMakeLists.txt  README.md  build.sh  calac_diff.py  demo.cpp  pinfer.py  start_docker.sh  start_docker_trt.sh
ort_infer/: CMakeLists.txt  data_type.h  infer.cpp  infer.h  infer_imp.cpp  infer_imp.h
ort_infer/3rdlib/glog_install/linux-x64-gpu/: libglog.so.1
ort_infer/3rdlib/glog_install/linux-x64-gpu/cmake/: cmake_install.cmake  glog-modules.cmake  glog-targets.cmake
ort_infer/3rdlib/ort_install/linux-x64-gpu/lib/: libonnxruntime.so.1.13.1
tmp/: eff_isc_bs16_simplify.onnx  eff_isc_fp16_bs16_T4_trt8.4.1_20230413.trt  onnxruntime-linux-x64-gpu-1.13.1.tgz
